--- a/app/src/main/res/layout/activity_iniciar_sesion.xml
+++ b/app/src/main/res/layout/activity_iniciar_sesion.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintIniciarSesion"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.purosurf.minibar.Vista.InicioSesion.IniciarSesion">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,12 +16,13 @@
 
         <ImageView
             android:id="@+id/ivLogoLogin"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="230dp"
+            android:layout_height="230dp"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            app:srcCompat="@mipmap/logo_puro_surf" />
+            android:layout_marginBottom="5dp"
+            app:srcCompat="@drawable/ic_purosurf1"
+            app:tint="@color/azulOscuro"
+            />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tilUsuarioLogin"
@@ -52,7 +53,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:hint="Contraseña"
-            app:boxStrokeErrorColor="@color/amarillo"
             app:passwordToggleEnabled="true"
             app:passwordToggleTint="@color/azul"
             app:boxStrokeColor="@color/azul"
@@ -70,39 +70,46 @@
                 android:textSize="18sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
+
         <Button
             android:id="@+id/btnIngresarLogin"
             style="@style/Widget.Material3.Button"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_margin="15dp"
+            android:layout_marginTop="5dp"
             android:backgroundTint="@color/azul"
             android:text="Ingresar"
-            android:textSize="18sp" />
-
-
-        <TextView
-            android:id="@+id/tvRecuperarLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="15dp"
-            android:gravity="center"
-            android:text="¿Haz olvidado la contraseña?"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
-
-        <Button
-            android:id="@+id/btnRecuperarLogin"
-            style="@style/Widget.Material3.Button.TextButton"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:text="Recuperar Cuenta"
-            android:textColor="@color/azulClaro"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            app:rippleColor="@color/azulVerde" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvRecuperarLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/btnRecuperarLogin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="¿Haz olvidado la contraseña?"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        tools:layout_editor_absoluteY="511dp" />
+
+    <Button
+        android:id="@+id/btnRecuperarLogin"
+        style="@style/Widget.Material3.Button.TextButton"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="5dp"
+        android:text="Recuperar Cuenta"
+        android:textColor="@color/azul"
+        android:textSize="18sp"
+        app:rippleColor="@color/azulVerde"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
