--- a/app/src/main/res/layout/activity_recuperar_cuenta.xml
+++ b/app/src/main/res/layout/activity_recuperar_cuenta.xml
@@ -2,11 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/edtCorreoRecuperar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.purosurf.minibar.Vista.InicioSesion.RecuperarCuenta">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -52,6 +50,7 @@
             android:layout_gravity="center"
             android:layout_margin="15dp"
             android:backgroundTint="@color/azul"
+            app:rippleColor="@color/azulVerde"
             android:text="Reestablecer Contraseña"
             android:textSize="18sp" />
     </LinearLayout>
