--- a/app/src/main/res/layout/activity_reestablecer_contrasena.xml
+++ b/app/src/main/res/layout/activity_reestablecer_contrasena.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.purosurf.minibar.Vista.InicioSesion.ReestablecerContrasena">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -89,6 +88,7 @@
             android:layout_gravity="center"
             android:layout_margin="15dp"
             android:backgroundTint="@color/azul"
+            app:rippleColor="@color/azulVerde"
             android:text="Confirmar"
             android:textSize="18sp" />
 
