Interfaz de Registro de consumos completa y crud de gestion de productos

--- a/app/src/main/res/layout/activity_gestionar_productos.xml
+++ b/app/src/main/res/layout/activity_gestionar_productos.xml
@@ -1,73 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/constraintSeleccionarGestion"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/constraintGestionProductos"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.purosurf.minibar.Vista.Administrador.SeleccionarGestion">
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cvMetaSG"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:cardCornerRadius="20dp"
-        android:layout_marginTop="20dp"
-        app:cardElevation="5dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+    tools:context=".Vista.Administrador.GestionProductos.GestionarProductos">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbarProductos"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toTopOf="@id/constraintGestionProductos"
         >
-        <LinearLayout
+
+        <com.google.android.material.appbar.MaterialToolbar
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:background="@color/azulPalido">
 
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="5dp"
-                app:srcCompat="@drawable/ic_logo1"
-                app:tint="@color/azulOscuro" />
-
-            <TextView
-                android:id="@+id/tvBienvenidoSG"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-
+            <Button
+                android:id="@+id/btnRegresarProductos"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:drawableLeft="@drawable/ic_icono_regresar"
+                android:drawableTint="@color/azulOscuro"
+                app:rippleColor="@color/azulClaro" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="10dp"
-                android:text="¿Qué desea hacer?"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:text="Gestionar Productos"
+                android:textSize="20sp"
+                android:textColor="@color/azulOscuro"
+                />
+        </com.google.android.material.appbar.MaterialToolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cvMetaProductos"
+        android:layout_width="350dp"
+        android:layout_height="150dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="5dp"
+        app:contentPadding="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/linearlayoutProductos"
+        app:layout_constraintTop_toBottomOf="@id/appbarProductos">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:gravity="center"
+                android:text="Menú de Gestión de Productos"
+                android:textColor="@color/azulOscuro"
+                android:textSize="23sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                    android:layout_width="150dp"
+                    android:layout_height="125dp"
+                android:layout_gravity="center_vertical"
+                    app:srcCompat="@drawable/jugo" />
         </LinearLayout>
+
+
+
 
     </com.google.android.material.card.MaterialCardView>
 
     <LinearLayout
+        android:id="@+id/linearlayoutProductos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/cvMetaSG"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/fabCerrarSesionSG"
+        app:layout_constraintTop_toBottomOf="@id/cvMetaProductos"
+        app:layout_constraintBottom_toBottomOf="parent"
         >
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cvGestionarProductosSG"
+            android:id="@+id/cvAdicionarProductos"
             android:layout_width="350dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
@@ -87,126 +112,126 @@
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_marginEnd="10dp"
                     android:layout_marginStart="30dp"
+                    android:layout_marginEnd="10dp"
+                    app:srcCompat="@drawable/ic_icono_adicionar"
+                    app:tint="@color/white" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Adicionar Productos"
+                    android:textColor="@color/white"
+                    android:textSize="22sp" />
+            </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cvDeshabilitarProductos"
+            android:layout_width="350dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="25dp"
+            android:animateLayoutChanges="true"
+            android:backgroundTint="@color/azulOscuro"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="5dp"
+            app:contentPadding="5dp"
+            app:rippleColor="@color/azulPalido">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="10dp"
+                    app:srcCompat="@drawable/ic_icono_deshabilitar"
+                    app:tint="@color/white" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Deshabilitar Productos"
+                    android:textColor="@color/white"
+                    android:textSize="22sp" />
+            </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cvActualizarProductos"
+            android:layout_width="350dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="25dp"
+            android:animateLayoutChanges="true"
+            android:backgroundTint="@color/azulOscuro"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="5dp"
+            app:contentPadding="5dp"
+            app:rippleColor="@color/azulPalido">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="10dp"
+                    app:srcCompat="@drawable/ic_icono_actualizar"
+                    app:tint="@color/white" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Actualizar Productos"
+                    android:textColor="@color/white"
+                    android:textSize="22sp" />
+            </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cvListarProductos"
+            android:layout_width="350dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="25dp"
+            android:animateLayoutChanges="true"
+            android:backgroundTint="@color/azulOscuro"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="5dp"
+            app:contentPadding="5dp"
+            app:rippleColor="@color/azulPalido">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="10dp"
                     app:srcCompat="@drawable/ic_icono_lista"
                     app:tint="@color/white" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Gestionar Productos"
-                    android:textColor="@color/white"
-                    android:textSize="22sp" />
-            </LinearLayout>
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cvGestionarHabitacionesSG"
-            android:layout_width="350dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="25dp"
-            android:animateLayoutChanges="true"
-            android:backgroundTint="@color/azulOscuro"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="5dp"
-            app:contentPadding="5dp"
-            app:rippleColor="@color/azulPalido">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="30dp"
-                    app:srcCompat="@drawable/ic_icono_habitacion"
-                    app:tint="@color/white" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Gestionar Habitaciones"
-                    android:textColor="@color/white"
-                    android:textSize="22sp" />
-            </LinearLayout>
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cvGestionarInventariosSG"
-            android:layout_width="350dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="25dp"
-            android:animateLayoutChanges="true"
-            android:backgroundTint="@color/azulOscuro"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="5dp"
-            app:contentPadding="5dp"
-            app:rippleColor="@color/azulPalido">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="30dp"
-                    app:srcCompat="@drawable/ic_icono_gestionar_inventarioo"
-                    app:tint="@color/white" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Gestionar Inventarios"
-                    android:textColor="@color/white"
-                    android:textSize="22sp" />
-            </LinearLayout>
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cvGestionarUsuariosSG"
-            android:layout_width="350dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="25dp"
-            android:animateLayoutChanges="true"
-            android:backgroundTint="@color/azulOscuro"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="5dp"
-            app:contentPadding="5dp"
-            app:rippleColor="@color/azulPalido">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="30dp"
-                    app:srcCompat="@drawable/ic_icono_gestionar_usuarios"
-                    app:tint="@color/white" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Gestionar Usuarios"
+                    android:text="Listar Productos"
                     android:textColor="@color/white"
                     android:textSize="22sp" />
             </LinearLayout>
@@ -214,23 +239,5 @@
         </com.google.android.material.card.MaterialCardView>
 
     </LinearLayout>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabCerrarSesionSG"
-        style="@style/Widget.Material3.FloatingActionButton.Surface"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="@color/azulOscuro"
-        app:rippleColor="@color/azulClaro"
-        app:fabSize="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_icono_cerrarr_sesion"
-        app:tint="@color/white"
-        />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
