--- a/app/src/main/res/layout/activity_detalle_confirmar_consumo.xml
+++ b/app/src/main/res/layout/activity_detalle_confirmar_consumo.xml
@@ -11,18 +11,45 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/azulPalido">
+
+                <Button
+                    android:id="@+id/btnRegresarDCC"
+                    style="@style/Widget.Material3.Button.TextButton"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:drawableLeft="@drawable/ic_icono_regresar"
+                    android:drawableTint="@color/azulOscuro"
+                    app:rippleColor="@color/azulClaro" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Confirmar Consumo"
+                    android:textSize="20sp"
+                    android:textColor="@color/azulOscuro"
+                    />
+            </com.google.android.material.appbar.MaterialToolbar>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
         <TextView
-            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
             android:text="DETALLE CONSUMO"
-            android:textColor="@color/black"
-            android:textSize="23sp" />
+            android:textColor="@color/azulOscuro"
+            android:textSize="23sp"
+            android:textStyle="bold" />
 
         <View
-            android:id="@+id/view"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginLeft="15dp"
@@ -42,7 +69,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_margin="15dp"
             app:cardElevation="5dp">
 
             <ScrollView
@@ -79,7 +106,6 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/textView5"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -107,26 +133,12 @@
         android:backgroundTint="@color/azul"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btnCancelarDCC"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:text="Confirmar"
         android:textSize="18sp"
         app:rippleColor="@color/azulVerde"
         tools:layout_editor_absoluteX="106dp"
         tools:layout_editor_absoluteY="480dp" />
 
-    <Button
-        android:id="@+id/btnCancelarDCC"
-        style="@style/Widget.Material3.Button"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_margin="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:backgroundTint="@color/azul"
-        android:text="Cancelar"
-        android:textSize="18sp"
-        app:rippleColor="@color/azulVerde"
-        tools:layout_editor_absoluteX="106dp"
-        tools:layout_editor_absoluteY="560dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
