--- a/app/src/main/res/layout/activity_seleccionar_habitacion.xml
+++ b/app/src/main/res/layout/activity_seleccionar_habitacion.xml
@@ -20,7 +20,7 @@
             <com.google.android.material.appbar.MaterialToolbar
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white">
+                android:background="@color/azulPalido">
 
                 <Button
                     android:id="@+id/btnRegresarSH"
@@ -48,8 +48,9 @@
             android:layout_margin="15dp"
             android:gravity="center"
             android:text="Seleccione la Habitación"
-            android:textColor="@color/black"
-            android:textSize="23sp" />
+            android:textColor="@color/azulOscuro"
+            android:textSize="23sp"
+            android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvSeleccionarSH"
