--- a/app/src/main/res/layout/activity_seleccionar_producto.xml
+++ b/app/src/main/res/layout/activity_seleccionar_producto.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.purosurf.minibar.Vista.InicioSesion.RecuperarCuenta">
+    tools:context=".Vista.Administrador.GestionProductos.SeleccionarProducto">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="50dp">
@@ -19,66 +21,56 @@
                 android:background="@color/azulPalido">
 
                 <Button
-                    android:id="@+id/btnRegresarRecuperarCuenta"
+                    android:id="@+id/btnRegresarSP"
                     style="@style/Widget.Material3.Button.TextButton"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:drawableLeft="@drawable/ic_icono_regresar"
                     android:drawableTint="@color/azulOscuro"
                     app:rippleColor="@color/azulClaro" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Recuperar Cuenta"
-                    android:textSize="20sp"
+                    android:text="Seleccionar Producto"
                     android:textColor="@color/azulOscuro"
-                    />
+                    android:textSize="20sp" />
             </com.google.android.material.appbar.MaterialToolbar>
 
         </com.google.android.material.appbar.AppBarLayout>
 
         <TextView
-            android:id="@+id/tvIndicacionRecuperarCuenta"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:gravity="center"
-            android:text="Ingresa tu correo electronico"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilCorreoRC"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:id="@+id/tvEnunciadoSP"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:hint="Correo"
+            android:gravity="center"
+            android:text="ENUNCIADO"
+            android:textColor="@color/black"
+            android:textSize="23sp" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="65dp"
+            android:layout_margin="15dp"
+            android:hint="Seleccione la categoría"
             app:boxStrokeColor="@color/azul"
             app:hintTextColor="@color/azul">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edtCorreoRecuperarCuenta"
+            <AutoCompleteTextView
+                android:id="@+id/actvCategoriaSP"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_icono_email"
-                android:drawablePadding="7dp"
-                android:drawableTint="@color/azul"
-                android:inputType="textWebEmailAddress"
+                android:layout_height="match_parent"
                 android:textColor="@color/azulOscuro"
-                android:textSize="18sp" />
+                android:inputType="none" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-            android:id="@+id/btnReestablecerRecuperarCuenta"
-            style="@style/Widget.Material3.Button"
-            android:layout_width="270dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_margin="15dp"
-            android:backgroundTint="@color/azul"
-            app:rippleColor="@color/azulVerde"
-            android:text="Reestablecer Contraseña"
-            android:textSize="18sp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvSeleccionarProductoSP"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
