--- a/app/src/main/res/layout/cardview_lista_recyclerview.xml
+++ b/app/src/main/res/layout/cardview_lista_recyclerview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cvHabitaciones"
+    android:id="@+id/cvListaRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:rippleColor="@color/azulClaro"
@@ -22,7 +22,7 @@
             android:padding="6dp">
 
             <ImageView
-                android:id="@+id/ivIcono"
+                android:id="@+id/ivIconoRecyclerView"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentStart="true"
@@ -32,22 +32,22 @@
                 android:layout_alignParentLeft="true"/>
 
             <LinearLayout
-                android:id="@+id/textoContenido"
+                android:id="@+id/rlContenidoRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="15dp"
-                android:layout_toEndOf="@+id/ivIcono"
+                android:layout_toEndOf="@+id/ivIconoRecyclerView"
                 android:orientation="vertical"
                 android:layout_marginLeft="2dp"
-                android:layout_toRightOf="@+id/ivIcono">
+                android:layout_toRightOf="@+id/ivIconoRecyclerView">
 
                 <TextView
-                    android:id="@+id/tvHabitacion"
+                    android:id="@+id/tvNombreRecyclerView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Fecha de transacción"
+                    android:text="Nombre ITEM"
                     android:textSize="24sp"
                     android:textStyle="bold" />
             </LinearLayout>
