Diseño: Crud de Habitaciones (falta el apartado del mini-bar)

--- a/app/src/main/res/layout/activity_actualizar_habitacion.xml
+++ b/app/src/main/res/layout/activity_actualizar_habitacion.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Vista.Administrador.GestionProductos.DeshabilitarProductos">
+    tools:context=".Vista.Administrador.GestionHabitaciones.ActualizarHabitacion">
 
     <LinearLayout
-        android:id="@+id/linearLayoutDP"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +23,7 @@
                 android:background="@color/azulPalido">
 
                 <Button
-                    android:id="@+id/btnRegresarDP"
+                    android:id="@+id/btnRegresarACH"
                     style="@style/Widget.Material3.Button.TextButton"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
@@ -35,7 +34,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Deshabilitar Producto"
+                    android:text="Actualizar Habitación"
                     android:textColor="@color/azulOscuro"
                     android:textSize="20sp" />
             </com.google.android.material.appbar.MaterialToolbar>
@@ -43,7 +42,7 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <TextView
-            android:id="@+id/tvProductoDP"
+            android:id="@+id/tvNombreHabitacionACH"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
@@ -51,61 +50,43 @@
             android:textColor="@color/black"
             android:textSize="18sp" />
 
-        <TextView
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilNuevoNombreACH"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="3dp"
-            android:text="Seleccione el estado"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:layout_margin="15dp"
+            android:hint="Nombre Habitación"
+            app:boxStrokeColor="@color/azul"
+            app:hintTextColor="@color/azul">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:background="@color/grisFondo" />
-
-        <Switch
-            android:id="@+id/swActivoDP"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:checked="true"
-            android:showText="false"
-            android:splitTrack="false"
-            android:text="Activo"
-            android:textSize="18sp"
-            android:thumbTint="@color/azul"
-            android:trackTint="@color/azulClaro"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:background="@color/grisFondo" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtNuevoNombreACH"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_icono_habitacion"
+                android:drawablePadding="7dp"
+                android:drawableTint="@color/azul"
+                android:inputType="text"
+                android:textColor="@color/azulOscuro"
+                android:textSize="18sp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
     <Button
-        android:id="@+id/btnConfirmarDP"
+        android:id="@+id/btnActualizarACH"
         style="@style/Widget.Material3.Button"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_margin="15dp"
         android:backgroundTint="@color/azul"
-        android:text="Confirmar"
+        android:text="Actualizar"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:rippleColor="@color/azulVerde" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
