--- a/app/src/main/res/layout/activity_actualizar_productos.xml
+++ b/app/src/main/res/layout/activity_actualizar_productos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Vista.Administrador.GestionProductos.ActualizarProductos">
+    tools:context=".Vista.Administrador.GestionProductos.ActualizarProducto">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbarACP"
