--- a/app/src/main/res/layout/activity_adicionar_habitacion.xml
+++ b/app/src/main/res/layout/activity_adicionar_habitacion.xml
@@ -4,19 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Vista.Administrador.GestionProductos.DeshabilitarProductos">
+    tools:context=".Vista.Administrador.GestionHabitaciones.AdicionarHabitacion">
 
     <LinearLayout
-        android:id="@+id/linearLayoutDP"
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
         android:orientation="vertical">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginBottom="40dp">
+            android:layout_height="50dp">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:layout_width="match_parent"
@@ -24,7 +23,7 @@
                 android:background="@color/azulPalido">
 
                 <Button
-                    android:id="@+id/btnRegresarDP"
+                    android:id="@+id/btnRegresarAH"
                     style="@style/Widget.Material3.Button.TextButton"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
@@ -35,7 +34,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Deshabilitar Producto"
+                    android:text="Adicionar Habitación"
                     android:textColor="@color/azulOscuro"
                     android:textSize="20sp" />
             </com.google.android.material.appbar.MaterialToolbar>
@@ -43,39 +42,42 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <TextView
-            android:id="@+id/tvProductoDP"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:text="Registro de nueva habitación"
+            android:textColor="@color/azulOscuro"
+            android:textSize="23sp"
+            android:textStyle="bold" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilNombreAH"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:text="TextView"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:hint="Nombre Habitación"
+            app:boxStrokeColor="@color/azul"
+            app:hintTextColor="@color/azul">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="3dp"
-            android:text="Seleccione el estado"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:background="@color/grisFondo" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtNombreAH"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_icono_habitacion"
+                android:drawablePadding="7dp"
+                android:drawableTint="@color/azul"
+                android:inputType="text"
+                android:textColor="@color/azulOscuro"
+                android:textSize="18sp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Switch
-            android:id="@+id/swActivoDP"
+            android:id="@+id/swActivoAH"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:layout_margin="15dp"
             android:checked="true"
             android:showText="false"
             android:splitTrack="false"
@@ -85,17 +87,10 @@
             android:trackTint="@color/azulClaro"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:background="@color/grisFondo" />
-
     </LinearLayout>
 
     <Button
-        android:id="@+id/btnConfirmarDP"
+        android:id="@+id/btnConfirmarAH"
         style="@style/Widget.Material3.Button"
         android:layout_width="200dp"
         android:layout_height="50dp"
@@ -107,5 +102,4 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:rippleColor="@color/azulVerde" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
