--- a/app/src/main/res/layout/activity_adicionar_productos.xml
+++ b/app/src/main/res/layout/activity_adicionar_productos.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintAdicionarProducto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Vista.Administrador.GestionProductos.AdicionarProductos">
+    tools:context=".Vista.Administrador.GestionProductos.AdicionarProducto">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbarAP"
