--- a/app/src/main/res/layout/activity_seleccionar_habitacion_em.xml
+++ b/app/src/main/res/layout/activity_seleccionar_habitacion_em.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.purosurf.minibar.Vista.Empleado.SeleccionarHabitacion">
+    tools:context="com.purosurf.minibar.Vista.Empleado.SeleccionarHabitacionEM">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
