--- a/app/src/main/res/layout/cardview_registrar_consumos.xml
+++ b/app/src/main/res/layout/cardview_registrar_consumos.xml
@@ -46,6 +46,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Nombre Producto"
+                    android:textColor="@color/black"
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
@@ -54,6 +55,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="SubTotal"
+                    android:textColor="@color/black"
                     android:textSize="18sp" />
 
             </LinearLayout>
@@ -85,6 +87,7 @@
                     android:gravity="clip_horizontal|center_horizontal"
                     android:inputType="number"
                     android:text="0"
+                    android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
