--- a/app/src/main/res/layout/cardview_seleccionar_habitacion_admi.xml
+++ b/app/src/main/res/layout/cardview_seleccionar_habitacion_admi.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cvListaRecyclerView"
+    android:id="@+id/cvSeleccionarHabitaciónGH"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:rippleColor="@color/azulClaro"
@@ -9,6 +10,7 @@
     app:cardCornerRadius="20dp"
     app:cardElevation="4dp"
     app:cardUseCompatPadding="true">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,7 +24,7 @@
             android:padding="6dp">
 
             <ImageView
-                android:id="@+id/ivIconoRecyclerView"
+                android:id="@+id/ivIconoHabitacionGH"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentStart="true"
@@ -32,30 +34,33 @@
                 android:layout_alignParentLeft="true"/>
 
             <LinearLayout
-                android:id="@+id/rlContenidoRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
+                android:layout_marginTop="10dp"
+                android:layout_toEndOf="@id/ivIconoHabitacionGH"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="15dp"
-                android:layout_toEndOf="@+id/ivIconoRecyclerView"
-                android:orientation="vertical"
-                android:layout_marginLeft="2dp"
-                android:layout_toRightOf="@+id/ivIconoRecyclerView">
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tvNombreRecyclerView"
+                    android:id="@+id/tvNombreHabitacionGH"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nombre ITEM"
+                    android:text="Nombre Habitación"
                     android:textColor="@color/black"
                     android:textSize="24sp"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvEstadoHabitacionGH"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:text="Estado" />
             </LinearLayout>
 
         </RelativeLayout>
 
     </LinearLayout>
-
 
 </com.google.android.material.card.MaterialCardView>
